--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
+
 
 body {
   margin: 0;
@@ -46,9 +44,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -76,6 +72,23 @@ button:focus-visible {
   transition: background-color 0.3s ease;
 }
 
-.wrapper{
-  background-color: red;
+
+body{
+  background-color: #fff;
+  font-family: Poppins;
+}
+html{
+  overflow-x: hidden;
+}
+
+a{
+all: unset;
+}
+
+button{
+all: unset;
+}
+
+p{
+  all: unset;
 }
